# cloud-render

./: CMakeLists.txt  CMakePresets.json  README.md  design.md  vcpkg.json
ref/: draine.hlsl
shaders/: PNanoVDB.h  bindings.slang  phase.slang  render_volume.slang  temporal_denoise.slang  tonemap.slang  update_shadow_volume.slang
src/: core.hpp  main.cpp  renderer.cpp  renderer.hpp  ui.cpp  ui.hpp  volume_io.cpp  volume_io.hpp
